<resources>
    <string name="inapplogin">Please sing in with your Google account</string>
    <string name="korean">한국어</string>
    <string name="buypoint13">(주)스펙업애드 | 대표이사: 김영곤</string>
    <string name="buypoint14">TEL:070-4365-4386 | 사업자등록번호 : 105-87-57696</string>
    <string name="buypoint15">서울특별시 강남구 역삼동 830-9 영광빌딩 4층</string>
    <string name="notipush">팬마음</string>
    <string name="china">中文</string>
    <string name="bank01">기업은행</string>
    <string name="bank02">국민은행</string>
    <string name="bank03">우리은행</string>
    <string name="bank04">신한은행</string>
    <string name="bank05">하나은행</string>
    <string name="bank06">농협</string>
    <string name="bank07">우체국</string>
    <string name="payaccount02">입금 대기</string>
    <string name="payaccount03">{ID}님!\n 전용 가상계좌가 개설되었습니다.</string>
    <string name="payaccount04">입금 완료 후 마음이 자동 적립됩니다!</string>
    <string name="payaccount05">주문내역 보러가기</string>
    <string name="buypointcomplete01">{ID}님!\n 마음을 구매해주셔서 감사합니다.</string>
    <string name="buypointcomplete02">"최초의 연예인 서포트 앱"\n 팬마음과 함께 스타에게 가장 특별한 선물을 해보세요!</string>
    <string name="buypointcomplete03">마음 구매내역 보러가기</string>
    <string name="inapperror">An error occurred in the process of payment. Please contact Fanmaum to contact@fanmaum.com.</string>
    <string name="theme01">점심 맛나게 먹었쯤?</string>
    <string name="theme00">아이유</string>
    <string name="theme02">뭐해요~~?</string>
    <string name="theme03">듣고싶은 호칭을 입력</string>
    <string name="pop00">메시지 형식 변경</string>
    <string name="pop01">팬 마음 테마</string>
    <string name="pop02">카카오톡 테마</string>
    <string name="pop03">라인 테마</string>
    <string name="pop04">페이스북 테마</string>
    <string name="changephone"><![CDATA[※]]> 핸드폰 번호 변경을 위해 핸드폰 인증을 실시합니다.</string>
    <string name="notok01"> These passwords do not match. Try again?</string>
    <string name="starlist01">Select celebrity</string>
    <string name="starlist02">Cannot find the celebrity</string>
    <string name="notrecommend">Hearts will not be given when a new account is created with the same device. </string>
    <string name="paysave">{POINT} hearts are purchased.</string>
    <string name="find">Find</string>
    <string name="app_name">Fanmaum</string>
    <string name="companyname">Inquire</string>
    <string name="fanclubcover">Make a suggestion</string>
    <string name="start00">Start</string>
    <string name="starthint">Search celebrities</string>
    <string name="entryemail">Sign Up with Email</string>
    <string name="email">Email</string>
    <string name="pwd01">Password</string>
    <string name="pwd02">Confirm</string>
    <string name="phone">Phone number</string>
    <string name="countryphone">-Please enter without country code</string>
    <string name="nick">Nickname</string>
    <string name="birth">Birth</string>
    <string name="sex">Sex</string>
    <string name="marry">Marriage</string>
    <string name="celeb">Celeb</string>
    <string name="country">Country</string>
    <string name="recommend">Recommender</string>
    <string name="recommendcomment">Enter nickname who recommended Fanmaum to you</string>
    <string name="sign">Sign Up</string>
    <string name="dailysave">{POINT} Hearts are saved</string>
    <string name="starterm01">Inform date</string>
    <string name="starterm02">Please tell when it was taken.</string>
    <string name="starterm03">Inform</string>
    <string name="starterm04">/</string>
    <string name="starterm05"></string>
    <string name="newsfeedtitle">Newsfeed</string>
    <string name="upload">Upload</string>
    <string name="lockscreenimage01"> Delete Image</string>
    <string name="min">mins ago</string>
    <string name="hour">hour ago</string>
    <string name="schtitle">Title</string>
    <string name="begin">Start</string>
    <string name="end">End</string>
    <string name="contents">Detail</string>
    <string name="schsend">Please inform new schedule.</string>
    <string name="starrequest01">Request for new celeb</string>
    <string name="starrequest02">Ask for help</string>
    <string name="starrequest03">Make a request</string>
    <string name="lockscreendel01">Delete Image</string>
    <string name="lockscreendel02">Select all</string>
    <string name="lockscreenlock01">Lock screen</string>
    <string name="lockscreenlock02">off</string>
    <string name="lockscreenlock03">Lock screen settings</string>
    <string name="locktime01">Sun</string>
    <string name="locktime02">Mon</string>
    <string name="locktime03">Tue</string>
    <string name="locktime04">Wed</string>
    <string name="locktime05">Thu</string>
    <string name="locktime06">Fri</string>
    <string name="locktime07">Sat</string>
    <string name="locktime08">am</string>
    <string name="locktime09">pm</string>
    <string name="left_and_right">LeftRight</string>
    <string name="mainsupport01">Live</string>
    <string name="mainsupport02">Successful</string>
    <string name="mainsupport03">History</string>
    <string name="supportall00">See all Supports in progress</string>
    <string name="supportall01">Newest</string>
    <string name="supportall02">End Date</string>
    <string name="supportall03">Name</string>
    <string name="supportreadyall00">See all Supports to be delivered</string>
    <string name="supportreadyall01">Delivery Date</string>
    <string name="supportreadyall02">Most Raised</string>
    <string name="supportreadyall03">Name</string>
    <string name="historyall00">See all histories</string>
    <string name="historyall01">Newest</string>
    <string name="historyall02">Oldest</string>
    <string name="historyall03">Name</string>
    <string name="savemind">Save Hearts</string>
    <string name="start01">Sign Up now and enjoy more!</string>
    <string name="start02">Support your favorite Korean celebrity with Fanmaum!</string>
    <string name="start03">Not now</string>
    <string name="start04">Login</string>
    <string name="report01">Are you sure you want to report this post?</string>
    <string name="alram01">Turn on notifications</string>
    <string name="alram02">Turn off notifications</string>
    <string name="review01">Rate and review Fanmaum :D</string>
    <string name="review02">Please rate us and write a review.\nYour feedback is always welcomed!</string>
    <string name="review03">Give 5 stars</string>
    <string name="notimage">Failed downloading image. Please try again.</string>
    <string name="left01">Schedule</string>
    <string name="left02">Video</string>
    <string name="left03">Event</string>
    <string name="left04">Request for new celeb</string>
    <string name="left05">캐쉬아웃</string>
    <string name="left06">Notice</string>
    <string name="left07">Share Fanmaum</string>
    <string name="left08">Settings</string>
    <string name="left09">쿠폰함 바로가기</string>
    <string name="left10">Save Hearts</string>
    <string name="left11">적립내역</string>
    <string name="left12">내 쿠폰</string>
    <string name="lock02">Lock screen image</string>
    <string name="lock03">You can set your favorite celeb’s photos as your Lock screen image.</string>
    <string name="lock04">Go to Settings</string>
    <string name="tab01">Support</string>
    <string name="tab02">Timeline</string>
    <string name="tab03">News Feed</string>
    <string name="setting00">Account settings</string>
    <string name="setting01">Lock screen settings</string>
    <string name="setting01_1">Images, lock settings etc</string>
    <string name="setting02">잠금대화 설정</string>
    <string name="setting03">General settings</string>
    <string name="setting03_1">Notification etc</string>
    <string name="setting08">Thank you for your inquiry. We will be in touch with you shortly.</string>
    <string name="setting04">Contact and inquiries</string>
    <string name="setting05">Terms and conditions</string>
    <string name="setting04_1">Fanclub presidents participation is more than welcome</string>
    <string name="setting04_2">Supports suggestion</string>
    <string name="setting05_1">Terms you agree to use Fanmaum</string>
    <string name="setting06">Partnership</string>
    <string name="setting07">Version</string>
    <string name="setting09">Attendence</string>
    <string name="account01">You can use this email.</string>
    <string name="account02">This email is already registered. Try another.</string>
    <string name="account03">You can use this nickname.</string>
    <string name="account04">Someone already has that nickname. Try again.</string>
    <string name="account05">Enter a combination of at least six numbers and letters.</string>
    <string name="account06">These passwords are available to use.</string>
    <string name="account07">These passwords do not match. Try another.</string>
    <string name="account08">These passwords match.</string>
    <string name="account09">Combination of at least six numbers and letters.</string>
    <string name="account10">Enter again.</string>
    <string name="account11">We cannot find your phone number. Please contact to <![CDATA[[]]>contact@fanmaum.com<![CDATA[]]]></string>
    <string name="history01">Date : {DATE}</string>
    <string name="lockscreen00">Fanmaum lock screen</string>
    <string name="lockscreen01">Lock screen settings</string>
    <string name="lockscreen02">Random image order</string>
    <string name="lockscreen03">잠금 버튼 설정</string>
    <string name="lockscreen04">Lock screen messages</string>
    <string name="lockscreen05">No images to delete</string>
    <string name="lock01">{MONTH}월 {DAY}일</string>
    <string name="locksetting02">Profile image settings</string>
    <string name="locksetting">My profile images</string>
    <string name="profilesetting">Profile image settings</string>
    <string name="locksetting01">Lock screen images</string>
    <string name="welcome01">Welcome to Fanmaum</string>
    <string name="welcome02">Are you ready to Support your favorite celebs? </string>
    <string name="timelineupload01">Upload photos</string>
    <string name="timelineupload02">I don’t know when it’s taken</string>
    <string name="timelineupload03">Upload photos</string>
    <string name="newsfeed_write">Exceeded 1000-character limits. </string>
    <string name="newsfeed_writelength">{LENGTH}/1000</string>
    <string name="update01">Fanmaum is updated!</string>
    <string name="update02">Update Fanmaum from Google Play now!</string>
    <string name="update03">Not now</string>
    <string name="update04">Update</string>
    <string name="profile04">Find Password</string>
    <string name="confirmation">Ok</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="or">OR</string>
    <string name="agree">By clicking the button below, you agree with <b>Terms to use</b></string>
    <string name="sort_type">Sort by</string>
    <string name="all">All</string>
    <string name="support">Support</string>
    <string name="make_goods">굿즈 제작</string>
    <string name="login">Login</string>
    <string name="facebook_sign_up_">Sign up with Facebook</string>
    <string name="facebook_sign_in">Login with Facebook</string>
    <string name="naver_sign_up_">Sign up with Naver</string>
    <string name="naver_sign_in">Login with Naver</string>
    <string name="twitter_sign_up_">Sign up with Twitter</string>
    <string name="twitter_sign_in">Login with Twitter</string>
    <string name="fanmaum_permission_check">Asking for Permission</string>
    <string name="fanmaum_permission_text">※ Please allow Fanmaum to access below</string>
    <string name="permission_storage">(Necessary)Memory</string>
    <string name="permission_call">(Necessary)Phone</string>
    <string name="permission_contacts">(Necessary)Contact</string>
    <string name="permission_storage_text">need in saving images</string>
    <string name="permission_call_text">need in earning points</string>
    <string name="permission_contacts_text">need in sharing support projects</string>
</resources>