<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="specup.fanmind.PermissionCheckActivity">

    <TextView
        android:id="@+id/permission_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:text="@string/fanmaum_permission_check"
        android:textColor="#000000"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/permission_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/permission_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/fanmaum_permission_text"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/permission_storage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/permission_text"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/permission_storage"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/permission_storage"
        android:layout_below="@+id/permission_storage"
        android:layout_marginTop="5dp"
        android:text="@string/permission_storage_text"
        android:textColor="#b4b4b4"/>

    <TextView
        android:id="@+id/permission_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/permission_storage"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/permission_call"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/permission_call"
        android:layout_below="@+id/permission_call"
        android:layout_marginTop="5dp"
        android:text="@string/permission_call_text"
        android:textColor="#b4b4b4"/>

    <TextView
        android:id="@+id/permission_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/permission_call"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/permission_contacts"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/permission_contacts"
        android:layout_below="@+id/permission_contacts"
        android:layout_marginTop="5dp"
        android:text="@string/permission_contacts_text"
        android:textColor="#b4b4b4"/>

    <RelativeLayout
        android:id="@+id/permission_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmation"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"/>
    </RelativeLayout>
</RelativeLayout>
