<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="16.5dp"
                android:layout_height="12dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/login_3_email"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/textview_defalt_string"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="14.5dp"
                android:layout_height="17.5dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/login_6_password"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pwd01"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            >

            <LinearLayout
                android:id="@+id/search_passward"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="14.5dp"
                    android:layout_height="14.5dp"
                    android:background="@drawable/btn_password_search"/>

                <TextView
                    android:id="@+id/textview_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:text="@string/profile04"
                    android:textColor="@color/password_search"
                    android:textSize="@dimen/textview_defalt_string"
                    />
                />


            </LinearLayout>
        </RelativeLayout>


        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="23.67dp"
            android:background="@drawable/btn_sub_btn03"
            android:text="@string/login"
            android:textColor="@color/btn03"
            android:textSize="@dimen/textview_defalt_string"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="53.5dp"
            android:gravity="center"
            android:text="@string/or"
            android:textSize="@dimen/textview_defalt_string"/>

        <Button
            android:id="@+id/button_login_facebook"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/btn_facebook"
            android:text="@string/facebook_sign_in"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/textview_defalt_string"
            />

        <Button
            android:id="@+id/button_login_twitter"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="6.67dp"
            android:background="@drawable/btn_twitter"
            android:text="@string/twitter_sign_in"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/textview_defalt_string"
            />

        <Button
            android:id="@+id/button_login_naver"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="6.67dp"
            android:background="@drawable/btn_naver"
            android:text="@string/naver_sign_in"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/textview_defalt_string"
            />


    </LinearLayout>
</LinearLayout>