<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >

            <Button
                android:id="@+id/button_facebook"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@drawable/btn_facebook"
                android:onClick="onFacebookLogin"
                android:text="@string/facebook_sign_up_"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/textview_defalt_string"/>

            <Button
                android:id="@+id/button_twitter"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="6.67dp"
                android:background="@drawable/btn_twitter"
                android:text="@string/twitter_sign_up_"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/textview_defalt_string"
                />

            <Button
                android:id="@+id/button_naver"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="6.67dp"
                android:background="@drawable/btn_naver"
                android:onClick="onNaverLogin"
                android:text="@string/naver_sign_up_"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/textview_defalt_string"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40.5dp"
                android:layout_marginTop="6.67dp"
                android:gravity="center"
                android:text="@string/or"
                android:textSize="@dimen/textview_defalt_string"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/page_margin"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <EditText
                            android:id="@+id/nick"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nick"
                            android:imeOptions="flagNoExtractUi"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true"

                            android:textSize="@dimen/textview_defalt_string"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="flagNoExtractUi"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/pwd01"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="flagNoExtractUi"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <EditText
                            android:id="@+id/passwordComform"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/pwd02"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="flagNoExtractUi"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_copyright_going"
                    android:layout_width="match_parent"
                    android:layout_height="53.5dp"
                    android:layout_marginTop="6.67dp"
                    android:gravity="center"
                    android:text="@string/agree"
                    android:textSize="@dimen/textview_defalt_string"/>

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_sub_btn03"
                    android:text="@string/sign"
                    android:textColor="@color/btn03"
                    android:textSize="@dimen/textview_defalt_string"
                    />


            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>